# FundKit

./: README.md  mf_id_map.json  pyproject.toml
.github/workflows/: sync_mf_ids.yml
scripts/: sync_mf_ids.py
src/fundkit/: __init__.py  config.py  exceptions.py
src/fundkit/data/: README.md  _base_client.py  historical_nav_client.py  nav_client.py  nav_store.py  scheme_details.py  scheme_parser.py
src/fundkit/schema/: nav_scheme.py  scheme_details.py
tests/data/: test_historical_client.py  test_nav_client.py
