[project]
name = "fundkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pandas-stubs>=3.0.0.260204"]

[tool.ruff]
target-version = "py312"
line-length = 98
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "ANN",   # flake8-annotations
    "ASYNC", # async checks
    "RUF",   # Ruff-specific rules
    "TRY",   # exception handling
    "RET",   # return statements
    "ARG",   # unused arguments
    "PTH",   # pathlib over os.path
]

ignore = [
    "ANN101", # self type annotation not required
    "ANN102", # cls type annotation not required
    "TRY003", # allow custom exception messages inline
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true

# Useful with optional dependencies like pandas
namespace_packages = true

# Optional: ignore missing stubs for third-party packages
ignore_missing_imports = false

# Extra strictness (included in strict, but explicit for clarity)
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

# Useful if using TYPE_CHECKING imports
enable_error_code = ["truthy-bool", "redundant-expr", "possibly-undefined"]
