[project]
name = "fundkit"
version = "0.1.0"
description = "Async-first Python library for Mutual Fund data and analytics"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@email.com" }]
keywords = ["mutual funds", "amfi", "india", "nav", "sip", "xirr", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.9.6",
    "polars>=1.40.1",
    "pydantic>=2.13.4",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=3.0.0", "pandas-stubs>=3.0.0"]
all = ["pandas>=3.0.0", "pandas-stubs>=3.0.0"]

[project.urls]
Homepage = "https://github.com/Anant-mishra1729/fundkit"
Repository = "https://github.com/Anant-mishra1729/fundkit"
Issues = "https://github.com/Anant-mishra1729/fundkit/issues"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "B",
    "C4",
    "UP",
    "SIM",
    "N",
    "ANN",
    "ASYNC",
    "RUF",
    "TRY",
    "RET",
    "ARG",
    "PTH",
    "S",     # security
    "ERA",   # no commented-out code
    "T20",   # no print statements
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "TRY003",
    "D105",
    "D107",
    "S101",   # allow assert for type narrowing
    "T201",   # allow print in scripts/debug
]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
preview = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
namespace_packages = true
ignore_missing_imports = false
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
enable_error_code = ["truthy-bool", "redundant-expr", "possibly-undefined"]

[[tool.mypy.overrides]]
module = "platformdirs.*"
ignore_missing_imports = true
